# chassis

./: .gitignore  hardware-errors.txt
common/: config.h
drawings/case/: case.fcstd  case.fcstd1  servo-suppoty.gcode  servo-suppoty.stl  top-panel.gcode  top-panel.stl
electric/libs/: mini-usb-b.lib
electric/scheme/: _saved_cam-chassis.sch  cam-chassis-cache.lib  cam-chassis-rescue.lib  cam-chassis.bak  cam-chassis.kicad_pcb  cam-chassis.kicad_pcb-bak  (+3 more)
software/: CMakeLists.txt  config-win.cmake
software/.build/3dparty/qxmpp/src/base/: moc_QXmppArchiveIq.cxx_parameters  moc_QXmppBindIq.cxx_parameters  moc_QXmppBookmarkSet.cxx_parameters  moc_QXmppByteStreamIq.cxx_parameters  moc_QXmppCodec_p.cxx_parameters  moc_QXmppConstants.cxx_parameters  moc_QXmppDataForm.cxx_parameters  moc_QXmppDiscoveryIq.cxx_parameters  moc_QXmppElement.cxx_parameters  moc_QXmppEntityTimeIq.cxx_parameters  moc_QXmppGlobal.cxx_parameters  moc_QXmppIbbIq.cxx_parameters  moc_QXmppIq.cxx_parameters  moc_QXmppJingleIq.cxx_parameters  moc_QXmppLogger.cxx_parameters  moc_QXmppMessage.cxx_parameters  moc_QXmppMucIq.cxx_parameters  moc_QXmppNonSASLAuth.cxx_parameters  moc_QXmppPingIq.cxx_parameters  moc_QXmppPresence.cxx_parameters  moc_QXmppPubSubIq.cxx_parameters  moc_QXmppRegisterIq.cxx_parameters  moc_QXmppResultSet.cxx_parameters  moc_QXmppRosterIq.cxx_parameters  moc_QXmppRpcIq.cxx_parameters  moc_QXmppRtpChannel.cxx_parameters  moc_QXmppSasl_p.cxx_parameters  moc_QXmppSessionIq.cxx_parameters  moc_QXmppSocks.cxx_parameters  moc_QXmppStanza.cxx_parameters  moc_QXmppStream.cxx_parameters  moc_QXmppStreamFeatures.cxx_parameters  moc_QXmppStreamInitiationIq_p.cxx_parameters  moc_QXmppStun.cxx_parameters  moc_QXmppUtils.cxx_parameters  moc_QXmppVCardIq.cxx_parameters  moc_QXmppVersionIq.cxx_parameters  moc_qdnslookup.cxx_parameters  moc_qdnslookup_p.cxx_parameters
software/.build/3dparty/qxmpp/src/client/: moc_QXmppArchiveManager.cxx_parameters  moc_QXmppBookmarkManager.cxx_parameters  moc_QXmppCallManager.cxx_parameters  moc_QXmppClient.cxx_parameters  moc_QXmppClientExtension.cxx_parameters  moc_QXmppConfiguration.cxx_parameters  moc_QXmppDiscoveryManager.cxx_parameters  moc_QXmppEntityTimeManager.cxx_parameters  moc_QXmppInvokable.cxx_parameters  moc_QXmppMessageReceiptManager.cxx_parameters  moc_QXmppMucManager.cxx_parameters  moc_QXmppOutgoingClient.cxx_parameters  moc_QXmppRemoteMethod.cxx_parameters  moc_QXmppRosterManager.cxx_parameters  moc_QXmppRpcManager.cxx_parameters  moc_QXmppTransferManager.cxx_parameters  moc_QXmppTransferManager_p.cxx_parameters  moc_QXmppVCardManager.cxx_parameters  moc_QXmppVersionManager.cxx_parameters
software/.build/3dparty/qxmpp/src/server/: moc_QXmppDialback.cxx_parameters  moc_QXmppIncomingClient.cxx_parameters  moc_QXmppIncomingServer.cxx_parameters  moc_QXmppOutgoingServer.cxx_parameters  moc_QXmppPasswordChecker.cxx_parameters  moc_QXmppServer.cxx_parameters  moc_QXmppServerExtension.cxx_parameters  moc_QXmppServerPlugin.cxx_parameters
software/.build/applications/client/src/: moc_brightness_wgt.cxx_parameters  moc_capture_wgt.cxx_parameters  moc_main_wnd.cxx_parameters  moc_pipe_setup.cxx_parameters  moc_res_dlg.cxx_parameters
software/.build/tests/sock_in/src/: moc_example_1_echoClient.cxx_parameters
software/.build/tests/sock_out/src/: moc_example_1_echoClient.cxx_parameters  moc_main_wnd.cxx_parameters
software/.build/tests/voiptest/src/: moc_mainwindow.cxx_parameters
software/.build/xmpp_io/src/: moc_lua_machine.cxx_parameters  moc_rpc_call_client.cxx_parameters  moc_rpc_call_interface.cxx_parameters  moc_xmpp_config_pipe_iq.cxx_parameters  moc_xmpp_io.cxx_parameters  moc_xmpp_msg_pipe.cxx_parameters  moc_xmpp_packet_iq.cxx_parameters  moc_xmpp_tcp_proxy.cxx_parameters  moc_xmpp_video.cxx_parameters
software/.build/xmpp_server/src/: moc_host_qxmpp.cxx_parameters
software/3dparty/: CMakeLists.txt
software/3dparty/QtWebApp-src/: CMakeLists.txt  readme.txt
software/3dparty/QtWebApp-src/QtWebApp/: CMakeLists.txt
software/3dparty/QtWebApp-src/QtWebApp/qtservice/: qtservice.cpp  qtservice_unix.cpp  qtservice_win.cpp
software/3dparty/qtlua-1.4/: CMakeLists.txt
software/3dparty/qxmpp/: CMakeLists.txt
software/applications/client/src/: main_wnd.cpp
software/applications/client/src/images/: client.ini
software/applications/host/src_txt/: host.ini  host.lua
software/common/: CMakeLists.txt
software/common/src/: files.qrc  process_tor.cpp  process_tor.h  process_xmpp_server.cpp  process_xmpp_server.h
software/common/src/files/: cached-certs  cached-microdesc-consensus  cached-microdescs  cached-microdescs.new  control_auth_cookie  state  torrc.template
software/common/src/unused/: process_xmpp_server.cpp
software/ctrlboard/: CMakeLists.txt
software/ctrlboard/src/: ctrlboard_io.cpp  ctrlboard_io.h  usb_io.cpp
software/tests/: CMakeLists.txt
software/tests/http/: CMakeLists.txt  win32_opencv.cmake
software/tests/http/src/: cam_handler.cpp  cam_handler.h  chassis_handler.cpp  chassis_handler.h  icon.rc  main.cpp  requesthandler.cpp  requesthandler.h  res.qrc  res_handler.cpp  res_handler.h  root_handler.cpp  root_handler.h  settings.cpp  settings.h  settings.ui  sys_tray.cpp  sys_tray.h
software/tests/http/src/linux/: cam_handler.cpp
software/tests/http/src/res/: config.ini  index.html  scripts.js  style.css
software/tests/http/src/windows/: cam_handler.cpp
software/tests/test_common/: CMakeLists.txt
software/tests/test_common/src/: main.cpp
software/tests/test_ctrlboard/: CMakeLists.txt
software/tests/test_ctrlboard/src/: main.cpp
software/tests/test_servo/: CMakeLists.txt
software/tests/test_servo/src/: main.c  pwm_ctrl.c  pwm_ctrl.h
software/tests/voiptest/src/: mainwindow.cpp
software/video_input/: CMakeLists.txt  inverse_matrix.wxm
software/video_input/src/: capture.cpp  capture.h  capture_wgt.cpp  capture_wgt.h  capture_wgt.ui  images.qrc  videoInput.cpp  videoInput.h
software/video_input/strmbase/: CMakeLists.txt
software/xmpp_io/: CMakeLists.txt
software/xmpp_io/src/: xmpp_io.cpp
(+27 files in other folders)
