
cmake_minimum_required( VERSION 2.6 )
project( "chassis" )
set( ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
set( CMAKE_INSTALL_PREFIX ${ROOT}/.build.app )
if ( WIN32 )
    include( "./config-win.cmake" )
    add_subdirectory( "./video_input" )
elseif ( UNIX )
    include( "./config-linux.cmake" )
endif ( WIN32 )
add_subdirectory( "./3dparty" )
#add_subdirectory( "./xmpp_server" )
#add_subdirectory( "./xmpp_io" )
#add_subdirectory( "./applications" )
add_subdirectory( "./common" )
add_subdirectory( "./tests" )
add_subdirectory( "./ctrlboard" )
if ( UNIX )
    #add_subdirectory( "./app_host" )
    #add_subdirectory( "./luactrlboard" )
endif ( UNIX )
